[gd_scene load_steps=10 format=3 uid="uid://cwajxjg83lhvk"]

[ext_resource type="Script" uid="uid://dme5f24l0edsf" path="res://addons/beehave/blackboard.gd" id="1_6sm0b"]
[ext_resource type="Script" uid="uid://b03eqi34tx56p" path="res://actors/units/goblin/goblin.gd" id="1_sslfq"]
[ext_resource type="PackedScene" uid="uid://c7yb6gs1gbdyj" path="res://behaviors/trees/actor_tree.tscn" id="2_sslfq"]
[ext_resource type="PackedScene" uid="uid://d1vu6uufq4cpf" path="res://assets/models/goblinmodel.glb" id="4_ks4ci"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_01yp8"]
render_priority = 1
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)
grow = true
grow_amount = 0.02
stencil_mode = 3
stencil_flags = 1
stencil_compare = 5
metadata/_stencil_owned = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_us47m"]
next_pass = SubResource("StandardMaterial3D_01yp8")
stencil_mode = 1
stencil_flags = 2
stencil_color = Color(1, 0, 0, 1)
stencil_outline_thickness = 0.02

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6sm0b"]
material = SubResource("StandardMaterial3D_us47m")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_01yp8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_sslfq"]

[node name="Goblin" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_sslfq")

[node name="Blackboard" type="Node" parent="."]
script = ExtResource("1_6sm0b")
metadata/_custom_type_script = "uid://dme5f24l0edsf"

[node name="ActorTree" parent="." node_paths=PackedStringArray("blackboard") instance=ExtResource("2_sslfq")]
<<<<<<< Updated upstream
blackboard = NodePath("@Node@21405")
=======
blackboard = NodePath("@Node@36233")
>>>>>>> Stashed changes

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0529926, 0)
visible = false
mesh = SubResource("CapsuleMesh_6sm0b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4096844, 0)
shape = SubResource("CapsuleShape3D_01yp8")

[node name="TargetSeekingRadius" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TargetSeekingRadius"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0.7906078, 0)
shape = SubResource("SphereShape3D_sslfq")

[node name="EffectTimer" type="Timer" parent="."]
one_shot = true

[node name="goblinmodel" parent="." instance=ExtResource("4_ks4ci")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -2.224207, 0.31997126, -0.4251995)

[connection signal="timeout" from="EffectTimer" to="." method="_on_effect_timer_timeout"]
